Revert "fix: Blurry text/rendering in Drawer on Chrome/Windows. closes: #4545"
This reverts commit b045f5578c56f0ae04f63f5e7b3db696f3254a18.

--- a/packages/daisyui/src/components/drawer.css
+++ b/packages/daisyui/src/components/drawer.css
@@ -75,8 +75,6 @@
 
       > :not(.drawer-overlay) {
         translate: 0%;
-        transform: none;
-        will-change: auto;
       }
     }
 
